[package]
name = "rw"
version = "0.1.0"
authors = ["skl <>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.44"
web-sys = { version = "0.3.0", features = ['Window', 'HtmlElement', 'Document', 'HtmlBodyElement'] }
image = "0.23.9"
base64 = "0.12.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
